@@ -1,3 +1,8 @@
+2004-02-26  ujwal
+
+	* Fixed a couple of emulation problems with reverse video on 
+	  OpenVMS systems in scrollDown and selectGraphicRendition.
+
 2004-02-25  ujwal
 
 	* Fixed display bug in scrollUp.
